# iot-locker

./: .dockerignore  .env  .env.docker  .env.docker.example  .gitignore  .kiosk_state.json  Dockerfile  README.md  analytics_queries.py  config.py  database.py  dieukhien.drawio  docker-compose.yml  kiosk.py  locker_gateway.py  locker_hardware.py  main.py  model.py  monitor.py  mqtt.drawio  mysql_schema.sql  order_camera.py  pin.drawio  pyproject.toml
cloudflared/: README.md  config.docker.yml  config.yml  credentials.json  quick-tunnel.sh
detection/: camera_tracking.py  capture_parcel_in_roi.py  code_scanner.py
docs/: erd.md  tidb_tiflash_mpp_guide.md
docs/flowcharts/: 01_tong_quan_he_thong.md  02_khoi_dong_csdl.md  03_giao_hang.md  04_gui_email.md  05_nhan_hang_bang_ma.md  06_nhan_hang_bang_link.md  07_mqtt_gateway_mo_tu.md  README.md
scripts/: benchmark_tidb_mpp.py  pi-down.sh  pi-kiosk.sh  pi-up.sh  prepare_benchmark_db.py  seed_synthetic_data.py  tiflash_setup.sql
tests/: test_form_validation.py  test_locker_gateway.py  test_locker_hardware.py  test_state_recovery.py
yolov8n_ncnn_model/: metadata.yaml
